Issue #3347698: Have the better CSS utility classes .hidden-anonymous to Hide for anonymous users and .visible-logged-in, .visible-admin to Show only for admin users

--- a/styles/base/_general.scss
+++ b/styles/base/_general.scss
@@ -8,3 +8,27 @@
 @import "../base/mixins";                                            // Vartheme mixins.
 @import "../../node_modules/bootstrap/scss/utilities";               // Bootstrap utilities.
 // -----------------------------------------------------------------------------
+
+// Hide for anonymous users.
+.hidden-anonymous,
+.visible-admin,
+.visible-logged-in {
+  display: none !important;
+}
+
+// Show only for logged in users.
+body.user-logged-in {
+  .visible-admin,
+  .visible-logged-in,
+  .hidden-anonymous {
+    display: inline-block !important;
+  }
+
+  .btn {
+    .visible-admin,
+    .visible-logged-in,
+    .hidden-anonymous {
+      display: inline-block !important;
+    }
+  }
+}
